--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,10 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="theme-color" content="#000000" />
 		<meta name="description" content="Web site created using create-react-app" />
-
+		<link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet" />
+		<link href="https://unpkg.com/nes.css@latest/css/nes.min.css" rel="stylesheet" />
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
+		<script src="https://nostalgic-css.github.io/NES.css/lib/dialog-polyfill.js"></script>
 		<title>React App</title>
 	</head>
 	<body>
