--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+		<link rel="icon" href="%PUBLIC_URL%/icon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="theme-color" content="#000000" />
 		<meta name="description" content="Web site created using create-react-app" />
@@ -10,7 +10,7 @@
 		<link href="https://unpkg.com/nes.css@latest/css/nes.min.css" rel="stylesheet" />
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
 		<script src="https://nostalgic-css.github.io/NES.css/lib/dialog-polyfill.js"></script>
-		<title>React App</title>
+		<title>Sudoku | Team Focussed</title>
 	</head>
 	<body>
 		<noscript>You need to enable JavaScript to run this app.</noscript>
